--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-         xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>ch.iterate.backblaze</groupId>
     <artifactId>b2</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0</version>
     <packaging>jar</packaging>
     <description>Java language bindings for Backblaze B2 Cloud Storage</description>
     <url>https://github.com/iterate-ch/backblaze-b2-java-api</url>
@@ -42,7 +40,8 @@
         <url>https://github.com/iterate-ch/backblaze-b2-java-api</url>
         <connection>https://github.com/iterate-ch/backblaze-b2-java-api</connection>
         <developerConnection>scm:git:git@github.com:iterate-ch/backblaze-b2-java-api.git</developerConnection>
-    </scm>
+      <tag>b2-2.0.0</tag>
+  </scm>
     <dependencies>
         <dependency>
             <groupId>org.json</groupId>
